--- a/index.html
+++ b/index.html
@@ -36,37 +36,37 @@
 <div class="wrapper">
         <section class="image-slider">
             <div class="image-slide">
-              <img class="img-banner" src="img/banner/1.jpg">
+              <img class="img-banner" src="img/banner/1.JPG">
             </div>
             <div class="image-slide"> 
-              <img  class="img-banner" src="img/banner/3.jpg">
+              <img  class="img-banner" src="img/banner/3.JPG">
             </div>
             <div class="image-slide"> 
-              <img  class="img-banner" src="img/banner/4.jpg">
+              <img  class="img-banner" src="img/banner/4.JPG">
             </div>
             <div class="image-slide"> 
-              <img  class="img-banner" src="img/banner/6.jpg">
+              <img  class="img-banner" src="img/banner/6.JPG">
             </div>
             <div class="image-slide"> 
-              <img  class="img-banner" src="img/banner/7.jpg">
+              <img  class="img-banner" src="img/banner/7.JPG">
             </div>
             <div class="image-slide"> 
-              <img  class="img-banner" src="img/banner/10.jpg">
+              <img  class="img-banner" src="img/banner/10.JPG">
             </div>
             <div class="image-slide"> 
-              <img  class="img-banner" src="img/banner/11.jpg">
+              <img  class="img-banner" src="img/banner/11.JPG">
             </div>
             <div class="image-slide"> 
-              <img  class="img-banner" src="img/banner/12.jpg">
+              <img  class="img-banner" src="img/banner/12.JPG">
             </div>
             <div class="image-slide"> 
-              <img  class="img-banner" src="img/banner/13.jpg">
+              <img  class="img-banner" src="img/banner/13.JPG">
             </div>
             <div class="image-slide"> 
-              <img  class="img-banner" src="img/banner/14.jpg">
+              <img  class="img-banner" src="img/banner/14.JPG">
             </div>
             <div class="image-slide"> 
-              <img  class="img-banner" src="img/banner/16.jpg">
+              <img  class="img-banner" src="img/banner/16.JPG">
             </div>
     </section>
     
@@ -78,7 +78,7 @@
     <section class="home-seccion-2 container-fluid" id="Galeria">
         <div class="row">
             <article class="col-lg-6 col-md-6 col-sm-6 contenedor-proyectos">
-                <img src="img/bailador1.jpg" class="img-responsive" />
+                <img src="img/bailador1.JPG" class="img-responsive" />
                  <div class="trabajo-vermas">
                     <div class="trabajo-fondo-vermas">
                         <h2>Las costumbres y la singularidad</h2>
@@ -87,7 +87,7 @@
                 </div>
             </article>
             <article class="col-lg-6 col-md-6 col-sm-6 contenedor-proyectos">
-                <img src="img/bailadora1.jpg" class="img-responsive" />
+                <img src="img/bailadora1.JPG" class="img-responsive" />
                 <div class="trabajo-vermas">
                     <div class="trabajo-fondo-vermas">
                         <h2>Pasear por sus calles</h2>
@@ -96,7 +96,7 @@
                 </div>
             </article>
             <article class="col-lg-6 col-md-6 col-sm-6 contenedor-proyectos">
-                <img src="img/V2.jpg" class="img-responsive" />
+                <img src="img/V2.JPG" class="img-responsive" />
                  <div class="trabajo-vermas">
                     <div class="trabajo-fondo-vermas">
                         <h2>Embárcate en un viaje de Sabores</h2>
@@ -105,7 +105,7 @@
                 </div>
             </article>
             <article class="col-lg-6 col-md-6 col-sm-6 contenedor-proyectos">
-                <img src="img/DSC08415.jpg" class="img-responsive" />
+                <img src="img/DSC08415.JPG" class="img-responsive" />
                 <div class="trabajo-vermas">
                     <div class="trabajo-fondo-vermas">
                         <h2>Vive una experiencia </h2>
@@ -114,7 +114,7 @@
                 </div>
             </article>
             <article class="col-lg-6 col-md-6 col-sm-6 contenedor-proyectos">
-                <img src="img/gabo1.jpg" class="img-responsive" />
+                <img src="img/gabo1.JPG" class="img-responsive" />
                 <div class="trabajo-vermas">
                     <div class="trabajo-fondo-vermas">
                         <h2>Nuestro nobel</h2>
@@ -123,7 +123,7 @@
                 </div>
             </article>
             <article class="col-lg-6 col-md-6 col-sm-6 contenedor-proyectos">
-                <img src="img/gabo2.jpg" class="img-responsive" />
+                <img src="img/gabo2.JPG" class="img-responsive" />
                 <div class="trabajo-vermas">
                     <div class="trabajo-fondo-vermas">
                         <h2>La conexión con su padre</h2>
@@ -132,7 +132,7 @@
                 </div>
             </article>
             <article class="col-lg-6 col-md-6 col-sm-6 contenedor-proyectos">
-                <img src="img/since1.jpg" class="img-responsive" />
+                <img src="img/since1.JPG" class="img-responsive" />
                 <div class="trabajo-vermas">
                     <div class="trabajo-fondo-vermas">
                         <h2>En honor a su legado</h2>
@@ -141,7 +141,7 @@
                 </div>
             </article>
             <article class="col-lg-6 col-md-6 col-sm-6 contenedor-proyectos">
-                <img src="img/since2.jpg" class="img-responsive" />
+                <img src="img/since2.JPG" class="img-responsive" />
                 <div class="trabajo-vermas">
                     <div class="trabajo-fondo-vermas">
                         <h2>Descubre</h2>
@@ -150,7 +150,7 @@
                 </div>
             </article>
             <article class="col-lg-6 col-md-6 col-sm-6 contenedor-proyectos">
-                <img src="img/tigre1.jpg" class="img-responsive" />
+                <img src="img/tigre1.JPG" class="img-responsive" />
                 <div class="trabajo-vermas">
                     <div class="trabajo-fondo-vermas">
                         <h2>En una selva que hoy le llamamos calles</h2>
@@ -161,7 +161,7 @@
                 </div>
             </article>
             <article class="col-lg-6 col-md-6 col-sm-6 contenedor-proyectos">
-                <img src="img/tigre2.jpg" class="img-responsive" />
+                <img src="img/tigre2.JPG" class="img-responsive" />
                 <div class="trabajo-vermas">
                     <div class="trabajo-fondo-vermas">
                         <h2>La "Parodia del Tigre"</h2>
@@ -172,7 +172,7 @@
                 </div>
             </article>
             <article class="col-lg-6 col-md-6 col-sm-6 contenedor-proyectos">
-                <img src="img/2.jpg" class="img-responsive" />
+                <img src="img/2.JPG" class="img-responsive" />
                 <div class="trabajo-vermas">
                     <div class="trabajo-fondo-vermas">
                         <h2>Cuna  de talentosos artistas</h2>
@@ -181,7 +181,7 @@
                 </div>
             </article>
             <article class="col-lg-6 col-md-6 col-sm-6 contenedor-proyectos">
-                <img src="img/15.jpg" class="img-responsive" />
+                <img src="img/15.JPG" class="img-responsive" />
                 <div class="trabajo-vermas">
                     <div class="trabajo-fondo-vermas">
                         <h2>Con gran emoción</h2>
