--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 </div>
             </article>
             <article class="col-lg-6 col-md-6 col-sm-6 contenedor-proyectos">
-                <img src="img/since2.JPG" class="img-responsive" />
+                <img src="img/since2.jpg" class="img-responsive" />
                 <div class="trabajo-vermas">
                     <div class="trabajo-fondo-vermas">
                         <h2>Descubre</h2>
