solicitud de cambio

--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@
                     </ul>
                 <h3><a href="#">Contactanos</a></h3>
                 <ul>
-                    <li><a href="#">Numero: </a></li>
-                    <li><a href="#">Correo: </a></li>
-                    <li><a href="#">Dirección</a></li>       
+                    <li><a href="tel:+573008979500">+57 300 8979500</a></li>
+                    <li><a href="mailto:Contacto@sincemagico.co">Contacto@sincemagico.co</a></li>
                 </ul>
             </div>
             
             <div class="-col-lg-4 col-md-4 col-sm-12">
+                <h3><a href="#">Como llegar</a></h3>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d252028.14589592058!2d-75.21948144985491!3d9.249678893208067!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e5937f122b9122f%3A0x5f53d1cb77066e65!2sSan%20Luis%20de%20Sinc%C3%A9%2C%20Sucre!5e0!3m2!1ses!2sco!4v1709054788635!5m2!1ses!2sco" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             
